--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </ol>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 <script src="scripts/main.js"></script>
 
 </body>
